# bcc

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
bcc/: __init__.py  app.py  browser.py  cli.py  client.py  client_cli.py  exception_handler.py  firefox_profile.py  models.py  process.py  server_cli.py  settings.py  version.py
make/: common.mk  dist.mk  lint.mk  release.mk  test.mk
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_models.py  test_proc.py  test_profile.py  test_server.py
